# these-waifus-also-dont-exist

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  requirements.txt
.github/: dependabot.yml
.github/workflows/: cargo_check.yml  check_docker_build.yml  ci.yml  main.yml  publish_image.yml  run_clippy.yml  update_description.yml
src/: config.rs  endpoints.rs  html_template.rs  main.py  main.rs  templates.py  util.py  waifu.rs
src/endpoints/: html_template.rs
