[package]
name = "these-waifus-also-dont-exist"
version = "1.0.0"
authors = ["Natsumi H. <39241405+NatsumiHB@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
serde_json = "1.0.59"
actix-web = "3.3.0"
actix-rt = "1.1.1"
actix-files = "0.4.1"
anyhow = "1.0.34"
rand = "0.7.3"
log = "0.4.11"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"